# intelehealth-ai-ttx

./: Dockerfile  README.md  prompt_config.py  pyproject.toml  ttx_client.py  ttx_server.py
.github/workflows/: main.yml
artifacts/: README.md
artifacts/config/: model_registry.yaml
artifacts/models/: 25_08_2025_16_45_ttx_v3_groq_llama_4_maverick_17b_128e_instruct_cot_nas_v2_combined_medications_referral_tests_followup.json  30_05_2025_13_44_ttx_v3_gemini2_5_cot_nas_v2_combined_medications_referral_tests_followup.json
artifacts/prompts/: transformation-prompt-template.txt  ttx-base-system-prompt.txt
modules/: TTxv3Module.py
signatures/: TTxv3Signature.py
utils/: metric_utils.py  ttx_utils.py
